# weatherapp

./: Cargo.toml  README.md  build.sh  readme.md
src/: lib.rs  main.rs
